load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-lb2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
