mongo-delp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service # a random name
spec:
  selector:  # to connect to Pod through label
    app: mongodb
  ports:
    - port: 27017  # service port
      protocol: TCP
      targetPort: 27017  # container port
