dashboard-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
spec:
  rules:
    - host: dashboard.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: default-http-backend
              servicePort: 80
